@@ -1,3 +1,9 @@
+2006-01-22  Bruno Haible  <bruno@clisp.org>
+
+	* vasnprintf.c (VASNPRINTF): In the computation of the size of the
+	temporary buffer for sprintf, take into account the precision also
+	for 'd', 'i', 'u', 'o', 'x', 'X'.
+
 2006-01-10  Bruno Haible  <bruno@clisp.org>
 
 	* localcharset.c: Assume ANSI C. Fixes a gcc warning.
